iaac/k8s/microservices.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sync
  namespace: wsusscn2-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sync
  template:
    metadata:
      labels:
        app: sync
    spec:
      containers:
      - name: sync
        image: wsusscn2-api/sync:latest
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
          requests:
            memory: "128Mi"
            cpu: "100m"
        volumeMounts:
        - name: nlog-config
          mountPath: /app/NLog.config
          subPath: NLog.config
      volumes:
      - name: nlog-config
        configMap:
          name: nlog-config
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: parse
  namespace: wsusscn2-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: parse
  template:
    metadata:
      labels:
        app: parse
    spec:
      containers:
      - name: parse
        image: wsusscn2-api/parse:latest
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
          requests:
            memory: "128Mi"
            cpu: "100m"
        volumeMounts:
        - name: nlog-config
          mountPath: /app/NLog.config
          subPath: NLog.config
      volumes:
      - name: nlog-config
        configMap:
          name: nlog-config
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rebuild
  namespace: wsusscn2-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rebuild
  template:
    metadata:
      labels:
        app: rebuild
    spec:
      containers:
      - name: rebuild
        image: wsusscn2-api/rebuild:latest
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
          requests:
            memory: "128Mi"
            cpu: "100m"
        volumeMounts:
        - name: nlog-config
          mountPath: /app/NLog.config
          subPath: NLog.config
      volumes:
      - name: nlog-config
        configMap:
          name: nlog-config
