iaac/k8s/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: wsusscn2-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        image: wsusscn2-api/api:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
          requests:
            memory: "128Mi"
            cpu: "100m"
        volumeMounts:
        - name: nlog-config
          mountPath: /app/NLog.config
          subPath: NLog.config
      volumes:
      - name: nlog-config
        configMap:
          name: nlog-config
---
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: wsusscn2-api
spec:
  selector:
    app: api
  ports:
  - port: 80
    targetPort: 80
  type: ClusterIP
